--- a/lms/01-EXPLORATION/E13-camera_webapp/02-project/index.html
+++ b/lms/01-EXPLORATION/E13-camera_webapp/02-project/index.html
@@ -4,50 +4,52 @@
         <meta charset="UTF-8">
         <title>capture</title>
 
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1" ></script>
-        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0" ></script>
+
 
     </head>
     <body>
         <h1>project</h1>
-        <video playsinline autoplay></video>
-        <button>Take snapshot</button>
-        <canvas></canvas>
-        <script>
-            <!--  tag select       -->
-            video = document.querySelector('video');
-            canvas = document.querySelector('canvas');
-            button = document.querySelector('button');
+        <h2>video</h2>
+        <video playsinline autoplay></video> <br/>
+        <button >분석</button>
+        <br/>
+        <h2>결과</h2>
+        <table>
+            <tr>
+                <th><h5>얼굴검출</h5></th>
+                <th><h5>변환 이미지</h5></th>
+                <th><h5>결과</h5></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td> <canvas></canvas></td>
+                <td><span></span></td>
+            </tr>
+        </table>
 
-            <!-- btn event fn define   -->
-            button.onclick = function() {
-              canvas.width = video.videoWidth;
-              canvas.height = video.videoHeight;
-              canvas.getContext('2d').drawImage(video, 0, 0, video.videoWidth, video.videoHeight);
-                mobilenet.load().then(model => {
-                  model.classify(canvas).then(predictions => {
-                    alert(predictions[0].className + ': ' + predictions[0].probability);
-                    console.log(predictions);
-                  });
-                });
-            };
+       <br/>
 
-            constraints = {
-              audio: false,
-              video: true
-            };
-
-            function handleSuccess(stream) {
-              video.srcObject = stream;
+        <style>
+            table {
+              border-collapse: collapse;
             }
 
-            function handleError(error) {
-              alert('navigator.MediaDevices.getUserMedia error: ' + error.message + error.name);
+            table, th, td {
+              border: 1px solid black;
             }
 
-            navigator.mediaDevices.getUserMedia(constraints).then(handleSuccess).catch(handleError);
+            button {
+                padding: 10px;
+                border-radius: 5px;
+            }
+        </style>
 
 
-        </script>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.1" ></script>
+        <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet@1.0.0" ></script>
+
+        <script src="./main.js"></script>
     </body>
 </html>
